# ff14-utils

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.circleci/: config.yml
all-quest-text/: Cargo.toml
crafting-simulator/: Cargo.toml  NOTES.md  TODO.md
crafting-simulator/src/: actions.rs  arg_utils.rs  buffs.rs  config.rs  lib.rs  model.rs  presets.rs  simulator.rs
crafting-simulator/src/actions/: actions.rs  focused_actions.rs  mod.rs  progress_actions.rs  quality_actions.rs  repair_actions.rs
crafting-simulator/src/generator/: mod.rs  random_generator.rs  simple_mutations.rs
crafting-simulator/tests/: example_crafts.rs
crafting-simulator/util/: chart_generation_csv.py
ff14-data/: Cargo.toml  build.rs  embedded_types.rs
ff14-data/data/: .gitignore  CraftingFoodItems.json  Leve.json  RecipeLevelTable.json  update-data.sh
ff14-data/src/: csv.rs  embedded_csv.rs  embedded_data.rs  food.rs  item.rs  jsonext.rs  leve.rs  lib.rs  lookup.rs  model.rs  recipe.rs  rlvl.rs
market-utils/: .gitignore  Cargo.toml  README.md  TODO.md  recipe.sh
market-utils/src/: csv.rs  format_table.rs  lib.rs  lookup.rs  recipe_calculation.rs  scrip_compare.rs  time_utils.rs  universalis.rs
quest-text-helper/: Cargo.toml  README.md
quest-text-helper/src/: index.html  main.rs
quest-text-web/: .gitattributes  .prettierignore  package-lock.json  package.json
quest-text-web/pages/: _app.tsx  index.tsx
quest-text-web/pages/quests/: [id].tsx
quest-text-web/public/: all-quest-texts.data.json
scripts/: powershell-scripts.ps1
src/: csv.rs  lib.rs  lookup.rs  main.rs  model.rs  recipe_calculation.rs  time_utils.rs  universalis.rs
