[package]
name = "ff14-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = { version = "1.2.6", features = ["tokio"] }
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
