[package]
name = "ff14-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
csv-async = { version = "1.2.6", features = ["tokio"] }
derive_more = "0.99.17"
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
