[package]
name = "ff14-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
csv-async = { version = "1.2.6", features = ["tokio"] }
derive_more = "0.99.17"
rustc-hash = "1.1.0"
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.24"
itertools = "0.10.5"
colored = "2.0.0"
thousands = "0.2.0"
