[package]
name = "all-quest-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.3"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs"] }
