[package]
name = "crafting-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
derive_more = "0.99.17"
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
itertools = "0.12.0"
rand = "0.8.5"
ff14-data = { path = "../ff14-data" }
lazy_static = "1.4.0"
toml = "0.8.8"
pico-args = "0.5.0"
ctrlc = "3.4.1"
regex = "1.10.2"
