[package]
name = "ff14-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
derive_more = "0.99.17"
color-eyre = "0.6.2"
itertools = "0.10.5"
rustc-hash = "1.1.0"
rkyv = "0.7"
phf = { version = "0.13.1", features = ["macros"] }

[build-dependencies]
csv = "1.3.0"
rkyv = "0.7"
phf_codegen = "0.13.1"
