[package]
name = "quest-text-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
color-eyre = "0.6.2"
grep = "0.2.11"
itertools = "0.10.5"
tokio = { version = "1.27.0", features = [ "tokio-macros" ] }
