[package]
name = "quest-text-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
color-eyre = "0.6.2"
grep = "0.2.11"
itertools = "0.10.5"
netstat = "0.7.0"
serde = { version = "1.0.159", features = ["serde_derive"] }
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = [ "rt-multi-thread", "macros" ] }
